# qltbyt-nam-phong

./: .editorconfig  .env.example  .env.local.development  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .sonarcloud.properties  AGENTS.md  CLAUDE.md  COMMIT_MSG_CLEAR_ONLY_ONE.tmp  DESIGN_PROPOSAL_SIGNIN.md  ONBOARDING_NEW_MACHINE.md  OPENSPEC_TRANSFER_KANBAN_FIX.md  README.md  REDESIGN_QUICK_REFERENCE.md  REVIEW.md  SIGNIN_REDESIGN_GUIDE.md  WARP.md  doctor.config.json  handover_update.html  lefthook.yml  log_template.html  login_page_template.html  mainenance_page_reference.tsx  maintainance-html-form.html  next.config.ts  package-lock.json  package.json  prd.json  progress.txt  react-doctor.config.json  refs_original.txt  rule.md  schema.md  tailwind.config.ts  test.txt  tsconfig.json  tsconfig.test.json  (+4 more)
.beads/: .gitignore  PROJECT_GUIDE.md  interactions.jsonl  issues.jsonl
.github/: copilot-instructions.md
.serena/: project.yml
services/device-quota-suggestion-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/device-quota-suggestion-service/app/: __init__.py  embeddings.py  instrumentation.py  main.py  normalization.py  perf_harness.py  ranking.py  schemas.py  service.py  settings.py
services/device-quota-suggestion-service/scripts/: dqss_perf_harness.py
services/device-quota-suggestion-service/tests/: test_api.py  test_cache.py  test_docs.py  test_instrumentation.py  test_invariants.py  test_normalization.py  test_perf_harness.py  test_ranking.py  test_settings.py  test_smoke_load.py
(+2639 files in other folders)
