[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "device-quota-suggestion-service"
version = "0.1.0"
description = "Internal VM service for device quota category suggestions"
requires-python = ">=3.8"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.27.2",
  "pydantic==2.10.6",
  "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.8.6",
]
model = [
  "numpy==1.26.4; python_version >= '3.9'",
  "pyvi==0.1.1",
  "sentence-transformers==3.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["D100", "D101", "D102", "D103"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
